nginx/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-tailscale
  namespace: nginx
  labels:
    app.kubernetes.io/instance: nginx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/upstream-vhost: nginx.ts.soyspray.vip
    tailscale.com/funnel: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.ts.soyspray.vip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
  tls:
    - hosts:
        - nginx.ts.soyspray.vip
      secretName: nginx-ts-tls
